--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,64 +2,6 @@ load("@rules_java//java:defs.bzl", "java_binary", "java_proto_library")
 
 package(default_visibility = ["//visibility:public"])
 
-java_import(
-    name = "gapic_generator_java",
-    # Note referring to target/ is only for local development; you can also pull from remote
-    # filesystem, GCS bucket, Maven repositories, etc.
-    jars = ["target/gapic-generator-java-0.0.1-SNAPSHOT.jar"],
-)
-java_binary(
-    name = "protoc-gen-java_gapic",
-    srcs = glob(["src/main/java/**/*.java"]),
-    main_class = "com.google.api.generator.Main",
-    runtime_deps = ["gapic_generator_java"],
-)
-
-# TODO: some dependencies may be runtime only.
-MAIN_DEPS = [
-    ":service_config_java_proto",
-    "@com_google_api_api_common//jar",
-    "@com_google_api_gax_java//gax",
-    "@com_google_api_gax_java//gax:gax_testlib",
-    "@com_google_api_gax_java//gax-grpc:gax_grpc",
-    "@com_google_api_gax_java//gax-grpc:gax_grpc_testlib",
-    "@com_google_api_gax_java//gax-httpjson:gax_httpjson",
-    "@com_google_api_gax_java//gax-httpjson:gax_httpjson_testlib",
-    "@com_google_api_grpc_proto_google_common_protos",
-    "@com_google_auto_value_auto_value_annotations//jar", # Ideally should be compile-time only, but this is OK.
-    "@com_google_code_gson//jar",
-    "@com_google_googleapis//gapic/metadata:metadata_java_proto",
-    "@com_google_guava_guava",
-    "@com_google_http_client_google_http_client//jar",
-    "@com_google_protobuf//:protobuf_java",
-    "@com_google_protobuf//:protobuf_java_util",
-    "@google_java_format_all_deps//jar",
-    "@io_grpc_grpc_java//api",
-    "@io_grpc_grpc_java//protobuf",
-    "@io_grpc_grpc_java//stub",
-    "@javax_annotation_javax_annotation_api//jar",
-    "@junit_junit//jar",
-    "@org_threeten_threetenbp//jar",
-    "@org_yaml_snakeyaml//jar",
-]
-
-MAIN_DEPS_DEBUG_RUNTIME_ONLY = [
-    "@com_google_googleapis//google/api:api_java_proto",
-    "@com_google_googleapis//google/cloud:extended_operations_java_proto",
-    "@com_google_googleapis//google/longrunning:longrunning_java_proto",
-    "@com_google_protobuf//java/core",
-]
-
-# Some dependencies are runtime only, but that's fine for tests.
-TEST_DEPS = [
-    ":test_java_protos",
-    "@com_google_googleapis//google/logging/v2:logging_java_proto",
-    "@com_google_googleapis//google/pubsub/v1:pubsub_java_proto",
-    "@com_google_googleapis//google/rpc:rpc_java_proto",
-    "@com_google_truth_truth//jar",
-    "@io_github_java_diff_utils//jar",
-]
-
 java_proto_library(
     name = "service_config_java_proto",
     deps = ["@io_grpc_proto//:service_config_proto"],
@@ -92,18 +34,16 @@ java_proto_library(
     ],
 )
 
-java_plugin(
-    name = "autovalue_plugin",
-    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
-    deps = ["@com_google_auto_value_auto_value//jar"],
+java_import(
+    name = "gapic_generator_java",
+    # Note referring to target/ is only for local development; you can also pull from remote
+    # filesystem, GCS bucket, Maven repositories, etc.
+    jars = ["target/gapic-generator-java-0.0.1-SNAPSHOT.jar"],
 )
-
 java_binary(
     name = "protoc-gen-java_gapic",
-    srcs = glob(["src/main/java/**/*.java"]),
     main_class = "com.google.api.generator.Main",
-    plugins = [":autovalue_plugin"],
-    deps = MAIN_DEPS,
+    runtime_deps = ["gapic_generator_java"]
 )
 
 # Request dumper binary, which dumps the CodeGeneratorRequest to a file on disk
@@ -125,7 +65,7 @@ java_binary(
 java_binary(
     name = "protoc-gen-code_generator_request_dumper",
     main_class = "com.google.api.generator.debug.CodeGeneratorRequestDumper",
-    runtime_deps = ["protoc-gen-java_gapic"] + MAIN_DEPS_DEBUG_RUNTIME_ONLY,
+    runtime_deps = ["gapic_generator_java"],
 )
 
 # A binary similar to protoc-gen-java_gapic but reads the CodeGeneratorRequest
@@ -138,7 +78,7 @@ java_binary(
 java_binary(
     name = "code_generator_request_file_to_gapic_main",
     main_class = "com.google.api.generator.debug.CodeGeneratorRequestFileToGapicMain",
-    runtime_deps = ["protoc-gen-java_gapic"] + MAIN_DEPS_DEBUG_RUNTIME_ONLY,
+    runtime_deps = ["gapic_generator_java"],
 )
 
 # another test resource
@@ -151,19 +91,6 @@ genrule(
     message = "Generating proto descriptor",
     tools = ["@com_google_protobuf//:protoc"],
 )
-
-# Unit tests. Run each test with, e.g.,
-# bazel test //:unit_com_google_api_generator_engine_JavaCodeGeneratorTest
-[java_test(
-    name = "unit_" + file[14:-5].replace('/', '_'),
-    srcs = glob(["src/test/java/**/*.java"]),
-    test_class = file[14:-5].replace('/', '.'),
-    deps = [":protoc-gen-java_gapic"] + MAIN_DEPS + TEST_DEPS,
-    data = [":basic_proto_descriptor"] + glob([
-        "src/test/java/**/*.golden",
-        "src/test/resources/**",
-    ]),
-) for file in glob(["src/test/java/**/*Test.java"])]
 
 # Tests that generate and save unit golden (.golden) files.
 GOLDEN_UPDATING_UNIT_TESTS = [
@@ -186,21 +113,6 @@ GOLDEN_UPDATING_UNIT_TESTS = [
     "com.google.api.generator.gapic.composer.rest.ServiceSettingsClassComposerTest",
     "com.google.api.generator.gapic.composer.rest.ServiceStubSettingsClassComposerTest",
 ]
-
-# Manually runs a single JUnit test for the tests that generate and save .golden
-# files. To update .golden files, run with, e.g.,
-# bazel run //:update_com_google_api_generator_engine_JavaCodeGeneratorTest
-[java_binary(
-    name = "update_%s" % test_class.replace('.', '_'),
-    srcs = glob(["src/test/java/**/*.java"]),
-    main_class = "com.google.api.generator.test.framework.SingleJUnitTestRunner",
-    args = [test_class],
-    deps = [":protoc-gen-java_gapic"] + MAIN_DEPS + TEST_DEPS,
-    data = glob([
-        "src/test/java/**/*.golden",
-        "src/test/resources/**",
-    ]),
-) for test_class in GOLDEN_UPDATING_UNIT_TESTS]
 
 # google-java-format
 java_binary(
