--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,36 +5,35 @@ package(default_visibility = ["//visibility:public"])
 # TODO: some dependencies may be runtime only.
 MAIN_DEPS = [
     ":service_config_java_proto",
-    "@com_google_api_api_common//jar",
-    "@com_google_api_gax_java//gax",
-    "@com_google_api_gax_java//gax:gax_testlib",
-    "@com_google_api_gax_java//gax-grpc:gax_grpc",
-    "@com_google_api_gax_java//gax-grpc:gax_grpc_testlib",
-    "@com_google_api_gax_java//gax-httpjson:gax_httpjson",
-    "@com_google_api_gax_java//gax-httpjson:gax_httpjson_testlib",
-    "@com_google_api_grpc_proto_google_common_protos",
-    "@com_google_auto_value_auto_value_annotations//jar", # Ideally should be compile-time only, but this is OK.
-    "@com_google_code_gson//jar",
     "@com_google_googleapis//gapic/metadata:metadata_java_proto",
-    "@com_google_guava_guava",
-    "@com_google_http_client_google_http_client//jar",
-    "@com_google_protobuf//:protobuf_java",
-    "@com_google_protobuf//:protobuf_java_util",
-    "@google_java_format_all_deps//jar",
-    "@io_grpc_grpc_java//api",
-    "@io_grpc_grpc_java//protobuf",
-    "@io_grpc_grpc_java//stub",
-    "@javax_annotation_javax_annotation_api//jar",
-    "@junit_junit//jar",
-    "@org_threeten_threetenbp//jar",
-    "@org_yaml_snakeyaml//jar",
+    "@maven//:com_google_api_api_common",
+    "@maven//:com_google_api_gax",
+    "@maven//:com_google_api_gax_testlib",
+    "@maven//:com_google_api_gax_grpc",
+    "@maven//:com_google_api_gax_grpc_testlib",
+    "@maven//:com_google_api_gax_httpjson",
+    "@maven//:com_google_api_gax_httpjson_testlib",
+    "@maven//:com_google_api_grpc_proto_google_common_protos",
+    "@maven//:com_google_auto_value_auto_value_annotations", # Ideally should be compile-time only, but this is OK.
+    "@maven//:com_google_code_gson_gson",
+    "@maven//:com_google_guava_guava",
+    "@maven//:com_google_http_client_google_http_client",
+    "@maven//:com_google_protobuf_protobuf_java",
+    "@maven//:com_google_protobuf_protobuf_java_util",
+    "@maven//:com_google_googlejavaformat_google_java_format_all_deps",
+    "@maven//:io_grpc_grpc_api",
+    "@maven//:io_grpc_grpc_protobuf",
+    "@maven//:io_grpc_grpc_stub",
+    "@maven//:javax_annotation_javax_annotation_api",
+    "@maven//:junit_junit",
+    "@maven//:org_threeten_threetenbp",
+    "@maven//:org_yaml_snakeyaml",
 ]
 
 MAIN_DEPS_DEBUG_RUNTIME_ONLY = [
     "@com_google_googleapis//google/api:api_java_proto",
     "@com_google_googleapis//google/cloud:extended_operations_java_proto",
     "@com_google_googleapis//google/longrunning:longrunning_java_proto",
-    "@com_google_protobuf//java/core",
 ]
 
 # Some dependencies are runtime only, but that's fine for tests.
@@ -43,8 +42,8 @@ TEST_DEPS = [
     "@com_google_googleapis//google/logging/v2:logging_java_proto",
     "@com_google_googleapis//google/pubsub/v1:pubsub_java_proto",
     "@com_google_googleapis//google/rpc:rpc_java_proto",
-    "@com_google_truth_truth//jar",
-    "@io_github_java_diff_utils//jar",
+    "@maven//:com_google_truth_truth",
+    "@maven//:io_github_java_diff_utils_java_diff_utils",
 ]
 
 java_proto_library(
@@ -82,7 +81,7 @@ java_proto_library(
 java_plugin(
     name = "autovalue_plugin",
     processor_class = "com.google.auto.value.processor.AutoValueProcessor",
-    deps = ["@com_google_auto_value_auto_value//jar"],
+    deps = ["@maven//:com_google_auto_value_auto_value"],
 )
 
 java_binary(
@@ -197,7 +196,7 @@ java_binary(
     name = "google_java_format_binary",
     jvm_flags = ["-Xmx512m"],
     main_class = "com.google.googlejavaformat.java.Main",
-    runtime_deps = ["@google_java_format_all_deps//jar"],
+    runtime_deps = ["@maven//:com_google_googlejavaformat_google_java_format_all_deps"],
 )
 
 genrule(
