chore: add javax.annotation-api for Java 11 build

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,16 @@
       <version>1.7</version>
     </dependency>
 
+    <!--
+      TODO: remove when dropping Java 8.
+      https://github.com/googleapis/gapic-generator-java/issues/888
+    -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
