--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,12 +20,12 @@ MAIN_DEPS = [
     "@com_google_http_client_google_http_client//jar",
     "@com_google_protobuf//:protobuf_java",
     "@com_google_protobuf//:protobuf_java_util",
-    "@google_java_format_all_deps//jar",
     "@io_grpc_grpc_java//api",
     "@io_grpc_grpc_java//protobuf",
     "@io_grpc_grpc_java//stub",
     "@javax_annotation_javax_annotation_api//jar",
     "@junit_junit//jar",
+    "@maven//:com_google_googlejavaformat_google_java_format_all_deps",
     "@org_threeten_threetenbp//jar",
     "@org_yaml_snakeyaml//jar",
 ]
@@ -197,7 +197,7 @@ java_binary(
     name = "google_java_format_binary",
     jvm_flags = ["-Xmx512m"],
     main_class = "com.google.googlejavaformat.java.Main",
-    runtime_deps = ["@google_java_format_all_deps//jar"],
+    runtime_deps = ["@maven//:com_google_googlejavaformat_google_java_format_all_deps"],
 )
 
 genrule(
