--- a/gapic-generator-java/BUILD.bazel
+++ b/gapic-generator-java/BUILD.bazel
@@ -209,6 +209,7 @@ GOLDEN_UPDATING_UNIT_TESTS = [
     args = [test_class],
     runtime_deps = [
         ":gapic_generator_java",
+        ":gapic_generator_java_test",
     ] + MAIN_DEPS + TEST_DEPS,
     data = glob([
         "src/test/java/**/*.golden",
