--- a/gax-java/gax-grpc/build.gradle
+++ b/gax-java/gax-grpc/build.gradle
@@ -22,7 +22,9 @@ dependencies {
 
   runtimeOnly libraries['maven.io_grpc_grpc_xds']
 
-  compileOnly libraries['maven.com_google_auto_value_auto_value']
+  compileOnly(libraries['maven.com_google_auto_value_auto_value'],
+          libraries['maven.org_graalvm_sdk'],
+          libraries['maven.org_graalvm_nativeimage_svm'])
 
   testImplementation( project(':gax').sourceSets.test.output,
     libraries['maven.junit_junit'],
