--- a/gax-java/gax/build.gradle
+++ b/gax-java/gax/build.gradle
@@ -13,7 +13,9 @@ dependencies {
     libraries['maven.com_google_guava_guava'],
     libraries['maven.io_opencensus_opencensus_api'])
 
-  compileOnly libraries['maven.com_google_auto_value_auto_value']
+  compileOnly(libraries['maven.com_google_auto_value_auto_value'],
+          libraries['maven.org_graalvm_sdk'],
+          libraries['maven.org_graalvm_nativeimage_svm'])
 
   testImplementation(libraries['maven.junit_junit'],
     libraries['maven.org_mockito_mockito_core'],
