--- a/gax-java/gax/BUILD.bazel
+++ b/gax-java/gax/BUILD.bazel
@@ -9,6 +9,8 @@ _JAVA_COPTS = [
 
 _COMPILE_DEPS = [
     "@com_google_api_api_common//jar",
+    "@com_google_api_grpc_proto_google_common_protos//jar",
+    "@com_google_protobuf_java//jar",
     "@com_google_auth_google_auth_library_credentials//jar",
     "@com_google_auth_google_auth_library_oauth2_http//jar",
     "@com_google_auto_value_auto_value//jar",
