--- a/gax-java/gax/src/main/resources/META-INF/native-image/com.google.api/gax/native-image.properties
+++ b/gax-java/gax/src/main/resources/META-INF/native-image/com.google.api/gax/native-image.properties
@@ -2,4 +2,5 @@ Args = --allow-incomplete-classpath \
 --enable-url-protocols=https,http \
 --initialize-at-build-time=org.conscrypt,\
   org.slf4j.LoggerFactory,\
-  org.junit.platform.engine.TestTag
+  org.junit.platform.engine.TestTag \
+--initialize-at-run-time=com.google.api.client.googleapis.services.AbstractGoogleClientRequest$ApiClientVersion
