feat: next release from main branch is 2.2.0 (#355)

--- a/api-common-java/.github/release-please.yml
+++ b/api-common-java/.github/release-please.yml
@@ -14,3 +14,7 @@ branches:
     bumpMinorPreMajor: true
     handleGHRelease: true
     branch: 2.0.x
+  - releaseType: java-backport
+    bumpMinorPreMajor: true
+    handleGHRelease: true
+    branch: 2.1.x
