--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -192,6 +192,14 @@ GOLDEN_UPDATING_UNIT_TESTS = [
     "com.google.api.generator.gapic.composer.grpc.ServiceSettingsClassComposerTest",
     "com.google.api.generator.gapic.composer.grpc.ServiceStubClassComposerTest",
     "com.google.api.generator.gapic.composer.grpc.ServiceStubSettingsClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.GrpcServiceCallableFactoryClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.GrpcServiceStubClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.HttpJsonServiceCallableFactoryClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.HttpJsonServiceClientTestClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.HttpJsonServiceStubClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.ServiceClientClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.ServiceClientTestClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.ServiceSettingsClassComposerTest",
     "com.google.api.generator.gapic.composer.resourcename.ResourceNameHelperClassComposerTest",
     "com.google.api.generator.gapic.composer.rest.HttpJsonServiceCallableFactoryClassComposerTest",
     "com.google.api.generator.gapic.composer.rest.HttpJsonServiceStubClassComposerTest",
