fix: Fix `BetaApi` annotaiton usage for REST transport and clean BetaApi for stubs in all transports
This PR essentially does the following:
1) Cleans `@BetaApi("A restructuring of stub classes is planned, so this may break in the future")` annotaiton for Stub-related methods and Stub classes themselves, because those methods and classes have been in "beta" state like that for several  years already and are de-facto GA.
2) Makes sure that all HttpJson (REST) related classes and methods on the surface of the client are marked as beta for `grpc+rest` (mixed transport) clients. This is necessary in the context of the upcoming REGAPIC rollout to indicate that the newly released REST transport funcitonality is released at Beta quality level.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -200,6 +200,7 @@ GOLDEN_UPDATING_UNIT_TESTS = [
     "com.google.api.generator.gapic.composer.grpcrest.ServiceClientClassComposerTest",
     "com.google.api.generator.gapic.composer.grpcrest.ServiceClientTestClassComposerTest",
     "com.google.api.generator.gapic.composer.grpcrest.ServiceSettingsClassComposerTest",
+    "com.google.api.generator.gapic.composer.grpcrest.ServiceStubSettingsClassComposerTest",
     "com.google.api.generator.gapic.composer.resourcename.ResourceNameHelperClassComposerTest",
     "com.google.api.generator.gapic.composer.rest.HttpJsonServiceCallableFactoryClassComposerTest",
     "com.google.api.generator.gapic.composer.rest.HttpJsonServiceStubClassComposerTest",
