--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -79,6 +79,7 @@ proto_library(
         "@com_google_protobuf//:empty_proto",
         "@com_google_protobuf//:field_mask_proto",
         "@com_google_protobuf//:timestamp_proto",
+        "@com_google_protobuf//:struct_proto",
     ],
 )
 java_proto_library(
